overflow-y for tooltip issues

--- a/webui/react/src/shared/styles/index.scss
+++ b/webui/react/src/shared/styles/index.scss
@@ -53,6 +53,7 @@ code.block {
 }
 .u-wrap {
   overflow-x: visible;
+  overflow-y: hidden;
 }
 
 /* diamond cursor for most charts, see closestPointPlugin.module.scss for charts with that plugin (LearningCurve) */
